fix order review cart style/alignment

--- a/src/Components/ReviewItem/ReviewItem.css
+++ b/src/Components/ReviewItem/ReviewItem.css
@@ -4,12 +4,13 @@
     padding: 8px;
     margin-top: 21px;
     width: 571px;
-    height: 107px;
+    /* height: 107px; */
     display: flex;
 }
 
 .review-item img {
     width: 91px;
+    margin-right: 20px;
 }
 
 .review-item-details-container {
